# hdatastruct

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: hds_queue.h  hds_stack.h
include/stack/: hds_stack.h
src/queue/: hds_queue_basic.c  hds_queue_destroy.c  hds_queue_enqueue.c  hds_queue_init.c
src/stack/: hds_stack_basic.c  hds_stack_destroy.c  hds_stack_init.c  hds_stack_pop.c  hds_stack_push.c
